Project_1/Errors.txt
MyVector.hpp: In constructor ‘MyVector<T>::MyVector(size_t)’:
MyVector.hpp:35:25: error: ‘arrCapacity’ was not declared in this scope; did you mean ‘capacity’?
   35 |                         arrCapacity = capacity;
      |                         ^~~~~~~~~~~
      |                         capacity
MyVector.hpp:36:25: error: ‘arrSize’ was not declared in this scope
   36 |                         arrSize = 0;
      |                         ^~~~~~~
MyVector.hpp:37:25: error: ‘arr’ was not declared in this scope
   37 |                         arr = new T[arrCapacity];
      |                         ^~~
MyVector.hpp: In copy constructor ‘MyVector<T>::MyVector(const MyVector<T>&)’:
MyVector.hpp:43:25: error: ‘arrCapacity’ was not declared in this scope; did you mean ‘capacity’?
   43 |                         arrCapacity = other.arrCapacity;
      |                         ^~~~~~~~~~~
      |                         capacity
MyVector.hpp:44:25: error: ‘arrSize’ was not declared in this scope
   44 |                         arrSize = other.arrSize;
      |                         ^~~~~~~
MyVector.hpp:45:25: error: ‘arr’ was not declared in this scope
   45 |                         arr = new T[arrCapacity];
      |                         ^~~
MyVector.hpp: In destructor ‘MyVector<T>::~MyVector()’:
MyVector.hpp:59:34: error: ‘arr’ was not declared in this scope
   59 |                         delete[] arr;
      |                                  ^~~
MyVector.hpp: In member function ‘MyVector<T>& MyVector<T>::operator=(const MyVector<T>&)’:
MyVector.hpp:72:42: error: ‘arr’ was not declared in this scope
   72 |                                 delete[] arr;
      |                                          ^~~
MyVector.hpp:73:33: error: ‘arrCapacity’ was not declared in this scope; did you mean ‘capacity’?
   73 |                                 arrCapacity = rhs.arrCapacity;
      |                                 ^~~~~~~~~~~
      |                                 capacity
MyVector.hpp:74:33: error: ‘arrSize’ was not declared in this scope
   74 |                                 arrSize = rhs.arrSize;
      |                                 ^~~~~~~
MyVector.hpp: In member function ‘T& MyVector<T>::operator[](size_t) const’:
MyVector.hpp:86:32: error: ‘arr’ was not declared in this scope
   86 |                         return arr[index];
      |                                ^~~
MyVector.hpp: In member function ‘size_t MyVector<T>::size() const’:
MyVector.hpp:96:32: error: ‘arrSize’ was not declared in this scope
   96 |                         return arrSize;
      |                                ^~~~~~~
MyVector.hpp: In member function ‘size_t MyVector<T>::capacity() const’:
MyVector.hpp:102:32: error: ‘arrCapacity’ was not declared in this scope; did you mean ‘capacity’?
  102 |                         return arrCapacity;
      |                                ^~~~~~~~~~~
      |                                capacity
MyVector.hpp: In member function ‘bool MyVector<T>::empty() const’:
MyVector.hpp:113:17: warning: no return statement in function returning non-void [-Wreturn-type]
  113 |                 }
      |                 ^
MyVector.hpp: In member function ‘void MyVector<T>::changeCapacity(size_t)’:
MyVector.hpp:255:31: error: ‘elements’ was not declared in this scope; did you mean ‘elements_’?
  255 |             new_elements[i] = elements[i];
      |                               ^~~~~~~~
      |                               elements_
MyVector.hpp:257:18: error: ‘elements’ was not declared in this scope; did you mean ‘elements_’?
  257 |         delete[] elements;
      |                  ^~~~~~~~
      |                  elements_
MyVector.hpp: In member function ‘void MyVector<T>::copyOther(const MyVector<T>&)’:
MyVector.hpp:278:17: error: ‘elements’ was not declared in this scope; did you mean ‘elements_’?
  278 |             if (elements != nullptr) {
      |                 ^~~~~~~~
      |                 elements_
MyVector.hpp:283:13: error: ‘elements’ was not declared in this scope; did you mean ‘elements_’?
  283 |             elements = new int[capacity_];
      |             ^~~~~~~~
      |             elements_
MyVector.hpp: In instantiation of ‘T& MyVector<T>::at(size_t) const [with T = int; size_t = long unsigned int]’:
CPP_Tests.cpp:46:34:   required from here
MyVector.hpp:119:17: warning: no return statement in function returning non-void [-Wreturn-type]
  119 |                 }
      |                 ^

